--- a/Auc2/package.json
+++ b/Auc2/package.json
@@ -23,6 +23,7 @@
     "yargs": "^12.0.2"
   },
   "scripts": {
+    "test": "mocha",
     "build": "flow-remove-types src/ -d lib/",
     "prepublish": "npm run build",
     "flow": "flow"
