--- a/Auc2/package.json
+++ b/Auc2/package.json
@@ -2,6 +2,11 @@
   "name": "auction_full",
   "version": "1.0.0",
   "dependencies": {
+    "@babel/core": "^7.1.6",
+    "@sentry/node": "^4.3.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "latest",
     "connect-mongo": "^2.0.1",
     "express": "latest",
@@ -23,6 +28,7 @@
     "yargs": "^12.0.2"
   },
   "scripts": {
+    "webpack": "webpack",
     "test": "mocha",
     "build": "flow-remove-types src/ -d lib/",
     "prepublish": "npm run build",
