--- a/Stockmarket/package.json
+++ b/Stockmarket/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1"
   }
 }
