Map manager in work

--- a/Game/package.json
+++ b/Game/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "latest"
+    "express": "latest",
+    "pug": "^2.0.3"
   }
 }
